# sleuth

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  ui.rs
src/events/: actions.rs  events.rs  mod.rs
src/ui/: mod.rs  pattern_display.rs  tracker.rs  ui.rs
