[package]
name = "sleuth"
version = "0.1.0"
authors = ["Aoife <aoifeebradley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17"
tui = { version = "0.12", default-features = false, features = ['crossterm']}
argh = "0.1.3"
anyhow = "1.0.33"

[dev-dependencies]
dirs = "3.0.1"
